NL naar EN aanpassen

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <img id="racket" src="images/badminton-racket.png" alt="Badminton Racket">
-    <main id="visitekaartje">
-        <div id="omdraai">
+    <main id="business_card">
+        <div id="flip">
             <header class="content">
-                <img src="images/profielfoto.jpeg" alt="Profielfoto">
+                <img src="images/profielfoto.jpeg" alt="Profile picture">
                 <h1><span>DANNY</span> FRELINK</h1>
                 <p>Front-end Developer ~ CMD HvA</p>
             </header>
@@ -23,7 +23,7 @@
             <section class="content">
                 <h3>Skills</h3>
                 <div>
-                    <svg version="1.1" id="grafiek" xmlns="http://www.w3.org/2000/svg"
+                    <svg version="1.1" id="graph" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 208.8 69.5"
                         style="enable-background:new 0 0 208.8 69.5;" xml:space="preserve">
                         <style type="text/css">
@@ -50,32 +50,32 @@
                             }
                         </style>
                         <g>
-                            <line id="lijn" class="st0" x1="2.1" y1="66.6" x2="206.7" y2="66.6" />
+                            <line id="line" class="st0" x1="2.1" y1="66.6" x2="206.7" y2="66.6" />
                             <g id="html">
-                                <rect x="7.8" y="2.8" class="st1 balk" width="31.9" height="63.8" />
+                                <rect x="7.8" y="2.8" class="st1 beam" width="31.9" height="63.8" />
                                 <text transform="matrix(1 0 0 1 12.4642 56.431)"
-                                    class="st2 st3 st4 tekst_balk">HTML</text>
+                                    class="st2 st3 st4 text_beam">HTML</text>
                             </g>
                             <g id="css">
-                                <rect x="48.2" y="12" class="st1 balk" width="31.9" height="54.7" />
+                                <rect x="48.2" y="12" class="st1 beam" width="31.9" height="54.7" />
                                 <text transform="matrix(1 0 0 1 57.0861 56.431)"
-                                    class="st2 st3 st4 tekst_balk">CSS</text>
+                                    class="st2 st3 st4 text_beam">CSS</text>
                             </g>
 
                             <g id="js">
-                                <rect x="88.7" y="2.8" class="st1 balk" width="31.9" height="63.8" />
+                                <rect x="88.7" y="2.8" class="st1 beam" width="31.9" height="63.8" />
                                 <text transform="matrix(1 0 0 1 100.9122 56.4312)"
-                                    class="st2 st3 st4 tekst_balk">JS</text>
+                                    class="st2 st3 st4 text_beam">JS</text>
                             </g>
                             <g id="react">
-                                <rect x="129.2" y="37.8" class="st1 balk" width="31.9" height="28.8" />
+                                <rect x="129.2" y="37.8" class="st1 beam" width="31.9" height="28.8" />
                                 <text transform="matrix(1 0 0 1 132.1449 56.4308)"
-                                    class="st2 st3 st4 tekst_balk">REACT</text>
+                                    class="st2 st3 st4 text_beam">REACT</text>
                             </g>
                             <g id="php">
-                                <rect x="169.7" y="37.8" class="st1 balk" width="31.9" height="28.8" />
+                                <rect x="169.7" y="37.8" class="st1 beam" width="31.9" height="28.8" />
                                 <text transform="matrix(1 0 0 1 177.9523 56.431)"
-                                    class="st2 st3 st4 tekst_balk">PHP</text>
+                                    class="st2 st3 st4 text_beam">PHP</text>
                             </g>
                         </g>
                     </svg>
@@ -86,10 +86,10 @@
                     </ul>
                 </div>
                 <ul id="contact">
-                    <p><img src="images/Telefoon.png" alt="Telefoon"> +316 14607690</p>
-                    <p><img src="images/Calender.png" alt="Kalender"> 03/02/1998</p>
-                    <p><img src="images/Envelop.png" alt="Envelop"> danny-frelink@hotmail.nl</p>
-                    <p><img src="images/Wereldbol.png" alt="Wereldbol"> Dutch</p>
+                    <p><img src="images/Telefoon.png" alt="Phone"> +316 14607690</p>
+                    <p><img src="images/Calendar.png" alt="Calendar"> 03/02/1998</p>
+                    <p><img src="images/Envelop.png" alt="Envelope"> danny-frelink@hotmail.nl</p>
+                    <p><img src="images/Wereldbol.png" alt="Globe"> Dutch</p>
                 </ul>
             </section>
         </div>
